# FASTAPI-LMS

./: alembic.ini  main.py  pyproject.toml  requirements.txt  test.db
alembic-migrations/: env.py
alembic-migrations/versions/: 2c8c6737d032_initial_migration.py
api/: courses.py  sections.py  users.py
api/utils/cruds/: user.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
schema/: user.py
