[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["John-Dembaremba <johndembaremba97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.96.0"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
